fix: Fixed icon for the general part of settings page broken on firefox

--- a/packages/amplication-client/src/Layout/InnerTabLink.scss
+++ b/packages/amplication-client/src/Layout/InnerTabLink.scss
@@ -18,6 +18,7 @@
 
   .amp-icon {
     font-size: var(--title3-font-size);
+    width: 22px;
   }
 
   &:last-child {
